# speaker

./: CMakeLists.txt  Makefile  now_playing.sh  readme.md
apps/controller-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/controller-ui/src/: App.tsx  main.tsx  ruler-picker.tsx
apps/speaker/: CMakeLists.txt
apps/speaker/src/: main.cpp
cmake/: Warnings.cmake
libs/audio/: CMakeLists.txt
libs/audio/include/audio/: port_audio_output.h  ring_buffer.h
libs/audio/src/: port_audio_output.cpp
libs/control/: CMakeLists.txt
libs/control/include/control/: control_server.h
libs/control/src/: control_server.cpp
libs/dsp/: CMakeLists.txt
libs/dsp/include/dsp/: dc_blocker.h  distortion.h  effect.h  effect_chain.h  eq3band.h  gain.h  reverb.h
libs/dsp/src/: gain.cpp
